# backtester-lab

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  README.md  pyproject.toml
benchmarks/: integrated_benchmark.py  market_data_feed_benchmark.cpp  order_gateway_latency_benchmark.cpp  python_strategy_callback_benchmark.py
bindings/python/: backtester_module.cpp
docs/: domain_contract.md  explainability.md  integrated_backtest_contracts.md  integrated_performance.md  market_data_protocol.md  order_trade_protocol.md  python_strategy_api.md
examples/data/: integrated_explain.ndjson
examples/python/: integrated_explain_strategy.py  mean_reversion_strategy.py
notebooks/: integrated_explainability_walkthrough.ipynb  mean_reversion_example.ipynb
python/backtester/: __init__.py  _cpp.py  adapters.py  charts.py  context.py  feed_loader.py  gateway.py  integrated_feed_loader.py  integrated_runner.py  portfolio.py  progress.py  result.py  risk.py  runner.py  strategy.py  types.py
scripts/: benchmark_feather_read.py  convert_to_feather.py  test_python.sh
src/: main.cpp
src/app/: AppConfig.hpp  ArgsParser.cpp  ArgsParser.hpp
src/backtest/: IntegratedBacktestEngine.cpp  IntegratedBacktestEngine.hpp  MarketDataEventAdapter.cpp  MarketDataEventAdapter.hpp  OrderExecutionBridge.cpp  OrderExecutionBridge.hpp
src/book/: BookManager.cpp  BookManager.hpp  BookSnapshot.hpp  LimitOrderBook.cpp  LimitOrderBook.hpp
src/concurrency/: NonBlockingQueue.hpp
src/domain/: MarketDataEvent.cpp  MarketDataEvent.hpp  Types.hpp
src/gateway/: OrderChannel.hpp  OrderGatewayClient.cpp  OrderGatewayClient.hpp  OrderGatewayServer.cpp  OrderGatewayServer.hpp  OrderMessage.hpp
src/io/: FeatherEventReader.cpp  FeatherEventReader.hpp
src/lob/: EngineView.cpp  EngineView.hpp  FillSimulator.cpp  FillSimulator.hpp  HistoricalLOB.cpp  HistoricalLOB.hpp  HistoricalLobProcessor.cpp  HistoricalLobProcessor.hpp  HistoricalLobStore.cpp  HistoricalLobStore.hpp  LobTypes.hpp  SimulatedLOB.cpp  SimulatedLOB.hpp
src/messaging/: MarketDataGapDetector.cpp  MarketDataGapDetector.hpp  MarketDataMessage.hpp  MarketDataPublisher.cpp  MarketDataPublisher.hpp  MarketDataSubscriber.hpp
src/parsing/: JsonParser.cpp  JsonParser.hpp
src/processing/: AsyncSnapshotWriter.cpp  AsyncSnapshotWriter.hpp  IMarketDataEventProcessor.hpp  LobMarketDataEventProcessor.cpp  LobMarketDataEventProcessor.hpp  LoggingMarketDataEventProcessor.cpp  LoggingMarketDataEventProcessor.hpp  ShardedLobMarketDataEventProcessor.cpp  ShardedLobMarketDataEventProcessor.hpp
src/runners/: BenchmarkRunner.cpp  BenchmarkRunner.hpp  FeatherHardRunnerSupport.cpp  FeatherHardRunnerSupport.hpp  FlatMergeRunner.cpp  FlatMergeRunner.hpp  HardRunnerSupport.cpp  HardRunnerSupport.hpp  HierarchicalMergeRunner.cpp  HierarchicalMergeRunner.hpp  InputFileDiscovery.cpp  InputFileDiscovery.hpp  InputFormat.hpp  QueueItem.hpp  ResultPrinter.cpp  ResultPrinter.hpp  RunResult.hpp  StandardRunner.cpp  StandardRunner.hpp
tests/: TestSupport.hpp  test_domain_types.cpp  test_main.cpp  test_market_data_gap_detector.cpp  test_market_data_messages.cpp  test_market_data_publisher.cpp  test_market_data_subscriber.cpp  test_non_blocking_queue.cpp  test_order_channel.cpp  test_order_gateway_client.cpp  test_order_gateway_end_to_end.cpp  test_order_gateway_fills.cpp  test_order_gateway_server_sessions.cpp  test_order_gateway_server_validation.cpp  test_order_messages.cpp
tests/app/: ArgsParserTest.cpp
tests/backtest/: IntegratedBacktestEngineTest.cpp  MarketDataEventAdapterTest.cpp  OrderExecutionBridgeTest.cpp
tests/book/: BookManagerTest.cpp  LimitOrderBookTest.cpp
tests/concurrency/: NonBlockingQueueTest.cpp
tests/data/: lob_basic.ndjson
tests/data/lob_multi/: file1.ndjson  file2.ndjson
tests/domain/: MarketDataEventTest.cpp
tests/fixtures/integrated_l3/: explain_trace_expected.json  range.ndjson  tiny_real.ndjson
tests/fixtures/integrated_l3/deterministic/: file_0.ndjson  file_1.ndjson
tests/fixtures/python_feed/: sample_feed.jsonl
tests/io/: FeatherEventReaderTest.cpp
tests/lob/: EngineViewTest.cpp  FillSimulatorTest.cpp  HistoricalLOBTest.cpp  HistoricalLobProcessorTest.cpp  LobSummaryIntegrationTest.cpp  SimulatedLOBTest.cpp  ThreadSafetyTest.cpp
tests/parsing/: JsonParserTest.cpp
tests/processing/: AsyncSnapshotWriterTest.cpp  LobMarketDataEventProcessorTest.cpp
tests/python/: test_adapters.py  test_charts.py  test_cpp_gateway_bindings.py  test_cpp_import.py  test_cpp_messages.py  test_example_mean_reversion.py  test_feed_loader.py  test_gateway_facade.py  test_imports.py  test_integrated_explain_example.py  test_integrated_runner.py  test_portfolio.py  test_progress.py  test_python_benchmark_smoke.py  test_result.py  test_risk.py  test_runner_data_path.py  test_runner_synthetic.py  test_strategy_context.py  test_top_level_run.py  test_types.py
tests/runners/: FlatMergeRunnerTest.cpp  HardLobIntegrationTest.cpp  HierarchicalMergeRunnerTest.cpp  ResultPrinterTest.cpp  StandardRunnerLobIntegrationTest.cpp  StandardRunnerTest.cpp
